--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,34 @@ button:focus {
           height: auto; } }
       @media (max-width: 991px) {
         .home_banner_area .banner_inner .home_right_img {
-          display: none; } }
+           display:none;} }
+          @media (max-width: 991px) {
+            .home_banner_area .banner_inner .home_right_img {
+            display: block;
+          margin-right: 200px;
+          margin-top: -200px;
+        padding: auto;  } }
+        @media (max-width: 575px) {
+          .home_banner_area .banner_inner .home_right_img {
+          display: block;
+        margin-right: 200px;
+        margin-top: -200px;
+      padding: auto;  } }
+      @media (max-width: 427px) {
+        .home_banner_area .banner_inner .home_right_img {
+        display: block;
+      margin-right: 200px;
+      margin-top: -200px;
+      width: 500px;
+    padding: auto;
+  width: 150px;  } }
+  @media (max-width: 321px) {
+    .home_banner_area .banner_inner .home_right_img {
+    display: block;
+  margin-left: -40px;
+padding: auto;
+margin-top: -200px;
+  } }
     .home_banner_area .banner_inner .col-lg-7 {
       vertical-align: middle;
       align-self: center; }
@@ -392,6 +419,18 @@ button:focus {
         @media (max-width: 767px) {
           .home_banner_area .banner_inner .banner_content h1 {
             font-size: 50px; } }
+            @media (max-width: 481px) {
+              .home_banner_area .banner_inner .banner_content h1 {
+                font-size: 40px; } }
+                @media (max-width: 400px) {
+                  .home_banner_area .banner_inner .banner_content h1 {
+                    font-size: 30px; } }
+                    @media (max-width: 316px) {
+                      .home_banner_area .banner_inner .banner_content h1 {
+                        font-size: 20px; } }
+                @media (max-width: 468px) {
+                  .home_banner_area .banner_inner .banner_content h5 {
+                    font-size: 10px; } }
       .home_banner_area .banner_inner .banner_content h5 {
         font-size: 24px;
         margin-bottom: 35px; }
@@ -2443,7 +2482,8 @@ h6 {
     margin-top: 20px; }
   .about_area .about_img {
     position: relative;
-    right: 250px; }
+    right: 10px;
+  top: -60px; }
     @media (max-width: 1480px) {
       .about_area .about_img {
         right: 0; }
